# compyct

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
doc/: noise_figure.md  trivial_xtor.md
src/: __init__.py  gui.py  ngspice_backend.py  paramsets.py  python_models.py  sim.py  templates.py
src/backends/: ngspice_backend.py  spectre_backend.py
src/compyct/: __init__.py  cli.py  gui.py  model_suite.py  optimizer.py  paramsets.py  templates.py  util.py
src/compyct/backends/: backend.py  ngspice_backend.py  spectre_backend.py  spectre_mcw.py  spectre_template.py  spectre_util.py
src/compyct/examples/: trivial_xtor_defs.py
src/compyct/examples/standard_models/vacode/: trivial_xtor.va
src/compyct/tests/: test_ngspice_backend.py  test_trivial_sims.py  test_util.py
