[metadata]
name = Compyct
version = attr: compyct.__version__
author = Samuel James Bader
author_email = samuel.james.bader@gmail.com
description = Compact model fitting
license = 'None yet, development only.'

[options]
install_requires = 
    panel
    numpy
    scipy
package_dir=
    =src
packages=find_namespace:

[options.extras_require]
spectre =
    pynut
    pyspectre
    pexpect
ngspice =
    PySpice
test =
    python-dotenv[cli]
    pytest
    pytest-dotenv

[options.packages.find]
where=src

[options.package_data]
* =
    *.va

[options.entry_points]
console_scripts =
    compyct_compile_osdi = compyct.backends.ngspice_backend:compile_va_to_osdi
