[metadata]
name = Compyct
version = attr: compyct.__version__
author = Samuel James Bader
author_email = samuel.james.bader@gmail.com
description = Compact model fitting
license = 'None yet, development only.'

[options]
install_requires = 
    panel==1.4.4
    bokeh==3.4.3
    numpy
    scipy
    pint
package_dir=
    =src
packages=find_namespace:

[options.extras_require]
spectre =
    pynut
    psf_utils
    pyspectre
    pexpect
ngspice =
    PySpice
test =
    python-dotenv[cli]
    pytest
    pytest-dotenv

[options.packages.find]
where=src

[options.package_data]
* =
    *.va

[options.entry_points]
console_scripts =
    compyct_compile_osdi = compyct.backends.ngspice_backend:compile_va_to_osdi
